--- a/templates/parts/navbar.html.twig
+++ b/templates/parts/navbar.html.twig
@@ -7,14 +7,27 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <a class="nav-link" aria-current="page" href="{{path ('app_default')}}">Accueil</a>
         </li>
+
+        {% if app.user is null %}
         <li class="nav-item">
           <a class="nav-link" href="{{path ('app_login')}}">Se connecter</a>
         </li>
+        {% endif %}
+
+        {% if app.user is not null %}
         <li class="nav-item">
           <a class="nav-link" href="{{path ('app_logout')}}">Se déconnecter</a>
         </li>
+        {% endif %}
+
+         {% if app.user is not null and app.user.hasRoles("ROLE_RH") %}
+				<li class="nav-item">
+					<a class="nav-link" href="{{path ('app_admin')}}">Administration</a>
+				</li>
+        {% endif %}
+
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
