--- a/templates/parts/navbar.html.twig
+++ b/templates/parts/navbar.html.twig
@@ -1,36 +1,32 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-primary py-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand text-light fs-5 fw-bold ms-4" href="{{path ('app_default')}}">ANNUAIRE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="{{path ('app_default')}}">Accueil</a>
+          <a class="nav-link text-light fs-5 ms-4" aria-current="page" href="{{path ('app_default')}}">Accueil</a>
         </li>
 
         {% if app.user is null %}
         <li class="nav-item">
-          <a class="nav-link" href="{{path ('app_login')}}">Se connecter</a>
+          <a class="nav-link text-light fs-5 ms-4" href="{{path ('app_login')}}">Se connecter</a>
         </li>
         {% endif %}
 
         {% if app.user is not null %}
         <li class="nav-item">
-          <a class="nav-link" href="{{path ('app_logout')}}">Se déconnecter</a>
+          <a class="nav-link text-light fs-5 ms-4" href="{{path ('app_logout')}}">Se déconnecter</a>
         </li>
         {% endif %}
 
          {% if app.user is not null and app.user.hasRoles("ROLE_RH") %}
 				<li class="nav-item">
-					<a class="nav-link" href="{{path ('app_admin')}}">Administration</a>
+					<a class="nav-link text-light fs-5 ms-4" href="{{path ('app_admin')}}">Administration</a>
 				</li>
-        {% endif %}
-
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
+        {% endif %}        
       </ul>
     </div>
   </div>
