--- a/templates/parts/navbar.html.twig
+++ b/templates/parts/navbar.html.twig
@@ -9,7 +9,13 @@
         <li class="nav-item">
           <a class="nav-link text-light fs-5 ms-4" aria-current="page" href="{{path ('app_default')}}">Accueil</a>
         </li>
-
+        
+        {% if app.user is not null %}
+        <li class="nav-item">
+          <a class="nav-link text-light fs-5 ms-4" href="{{path ('app_user_index')}}">Annuaire</a>
+        </li>
+        {% endif %}
+        
         {% if app.user is null %}
         <li class="nav-item">
           <a class="nav-link text-light fs-5 ms-4" href="{{path ('app_login')}}">Se connecter</a>
@@ -19,7 +25,7 @@
         {% if app.user is not null %}
         <li class="nav-item">
           <a class="nav-link text-light fs-5 ms-4" href="{{path ('app_logout')}}">Se déconnecter</a>
-        </li>
+        </li>         
         {% endif %}
 
          {% if app.user is not null and app.user.hasRoles("ROLE_RH") %}
