--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,11 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}New User
+{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
+	<div class="container">
+		<h1 class="h3 mb-3 font-weight-normal text-center mt-5 text-uppercase">créer un nouveau compte</h1>
+		<div class="mb-4">
+			<a href="{{ path ('app_admin') }}">Retour</a>
+		</div>
 
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('app_user_index') }}">back to list</a>
+		{{ include('user/_form.html.twig') }}
+	</div>
 {% endblock %}
