--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,51 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}User index
+{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+	<div class="container">
+		<h1 class="my-5 text-center text-uppercase">annuaire des employés</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Email</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Photo</th>
-                <th>Sector</th>
-                <th>Contract</th>
-                <th>Release_date</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>{{ user.firstname }}</td>
-                <td>{{ user.lastname }}</td>
-                <td>{{ user.photo }}</td>
-                <td>{{ user.sector }}</td>
-                <td>{{ user.contract }}</td>
-                <td>{{ user.releaseDate ? user.releaseDate|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="11">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+		{# <div class="count">
+			<p class="fs-5 fw-bold">Total :
+				{{user.getTotalItemCount}}
+				Employés</p>
+		</div> #}
 
-    <a href="{{ path('app_user_new') }}">Create new</a>
-{% endblock %}
+		<div class="container">
+			<div class="row mb-4">
+				{% for user in users %}
+					<div class="card mx-3 my-3 shadow p-3 mb-5 bg-body rounded" style="width: 25rem;">
+						<img src="{{asset ('/uploads/users/' ~ user.photo)}}" height="450" class="card-img-top mt-3" alt="{{user.firstname}}">
+						<div class="card-body">
+							<h5 class="card-title text-center mb-3"> {{user.firstname}} {{user.lastname}}</h5>
+							<ul>
+								<li>Email :
+									{{user.email}}</li>
+								<li>Secteur :
+									{{user.sector}}</li>
+								<li>Type de contrat :
+									{{user.contract}}</li>
+							</ul>
+						</div>
+					</div>
+				{% else %}
+					<p>Il n'y a aucun employé.</p>
+				{% endfor %}
+			</div>
+		</div>
+	{% endblock %}
