--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -7,25 +7,38 @@
 	<div class="container">
 		<h1 class="h3 mb-3 font-weight-normal text-center mt-5 text-uppercase">créer un nouveau compte</h1>
 		<div class="mb-4">
-			<a href="{{ path ('app_admin') }}">Retour</a>
+			<a href="{{ path ('app_admin') }}" class="text-info fw-bold text-decoration-none">Retour</a>
 		</div>
 
 		{# {{ include('user/_form.html.twig') }} #}
-
+		<div class="container">
 		{{ form_start(form) }}
-		{{ form_row(form.firstname) }}
-		{{ form_row(form.lastname) }}
-		{{ form_row(form.email) }}
-		{{ form_row(form.password) }}
-		{{ form_row(form.photo) }}
-		{{ form_row(form.sector) }}
-		{{ form_row(form.contract) }}
-		{{ form_row(form.release_date) }}
+		<div class="mb-4">
+			<label class="text-primary fw-bold w-75">{{  form_row(form.firstname) }}</label><br>
+			<label class="text-primary fw-bold w-75">{{ form_row(form.lastname) }}</label>
+		</div>
+
+		<div class="mb-4">
+			<label class="text-primary fw-bold w-75">{{ form_row(form.email) }}</label><br>
+			<label class="text-primary fw-bold w-75">{{ form_row(form.password) }}</label>
+			<p class="fw-lighter fst-italic fs-6">* Votre mot de passe doit comporter 8 caractères au minimum, 1 lettre et 1 chiffre</p>
+		</div>
+
+		<div class="mb-4">
+			<label class="text-primary fw-bold w-75">{{ form_row(form.photo) }}</label>
+		</div>
+
+		<div class="mb-4">
+			<label class="text-primary fw-bold w-75">{{ form_row(form.sector) }}</label><br>
+			<label class="text-primary fw-bold w-75">{{ form_row(form.contract) }}</label><br>
+			<label class="text-primary fw-bold w-75">{{ form_row(form.release_date) }}</label>
+		</div>
 
 		<div class="d-flex justify-content-center mt-5">
 			<button type="submit" class="btn btn-primary">ENREGISTRER LE NOUVEAU COMPTE</button>
 		</div>
 
 		{{ form_end(form) }}
+		</div>
 	</div>
 {% endblock %}
