--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -11,27 +11,27 @@
 		</div>
 
 		{# {{ include('user/_form.html.twig') }} #}
-		<div class="container">
+		<div class="container border border-info border-3 rounded py-4 d-flex justify-content-center w-75">
 		{{ form_start(form) }}
 		<div class="mb-4">
-			<label class="text-primary fw-bold w-75">{{  form_row(form.firstname) }}</label><br>
-			<label class="text-primary fw-bold w-75">{{ form_row(form.lastname) }}</label>
+			<label class="text-primary fw-bold w-100">{{  form_row(form.firstname) }}</label><br>
+			<label class="text-primary fw-bold w-100">{{ form_row(form.lastname) }}</label>
 		</div>
 
 		<div class="mb-4">
-			<label class="text-primary fw-bold w-75">{{ form_row(form.email) }}</label><br>
-			<label class="text-primary fw-bold w-75">{{ form_row(form.password) }}</label>
+			<label class="text-primary fw-bold w-100">{{ form_row(form.email) }}</label><br>
+			<label class="text-primary fw-bold w-100">{{ form_row(form.password) }}</label>
 			<p class="fw-lighter fst-italic fs-6">* Votre mot de passe doit comporter 8 caractères au minimum, 1 lettre et 1 chiffre</p>
 		</div>
 
 		<div class="mb-4">
-			<label class="text-primary fw-bold w-75">{{ form_row(form.photo) }}</label>
+			<label class="text-primary fw-bold w-100">{{ form_row(form.photo) }}</label>
 		</div>
 
 		<div class="mb-4">
-			<label class="text-primary fw-bold w-75">{{ form_row(form.sector) }}</label><br>
-			<label class="text-primary fw-bold w-75">{{ form_row(form.contract) }}</label><br>
-			<label class="text-primary fw-bold w-75">{{ form_row(form.release_date) }}</label>
+			<label class="text-primary fw-bold w-100">{{ form_row(form.sector) }}</label><br>
+			<label class="text-primary fw-bold w-100">{{ form_row(form.contract) }}</label><br>
+			<label class="text-primary fw-bold w-100">{{ form_row(form.release_date) }}</label>
 		</div>
 
 		<div class="d-flex justify-content-center mt-5">
