--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,16 +1,64 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Hello AdminController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1>Bonjour {{ app.user.firstname }} {{app.user.lastname}} </h1>
+	<div class="container">
+		<h1 class="mt-5 mb-3 text-center">Bonjour
+			{{ app.user.firstname }}
+			{{app.user.lastname}}</h1>
+        
+        <h2 class="text-center mb-5 fst-italic">Bienvenue dans votre espace administration</h2>
 
-    <a href="{{path ('app_user_new')}}">Ajouter un employé</a>
-</div>
+		<a href="{{path ('app_user_new')}}" class="text-uppercase text-decoration-none btn btn-success">+ créer un compte</a>
+	</div>
+
+	<div class="container">
+		<div class="row mb-4">
+			{% for user in users %}
+				<div class="card mx-3 my-3 shadow p-3 mb-5 bg-body rounded" style="width: 25rem;">
+					<img src="{{asset ('/uploads/users/' ~ user.photo)}}" height="450" class="card-img-top mt-3" alt="{{user.firstname}}">
+					<div class="card-body">
+						<h5 class="card-title text-center mb-3">
+							{{user.firstname}}
+							{{user.lastname}}</h5>
+						<ul>
+							<li>Email :
+								{{user.email}}</li>
+							<li>Secteur :
+								{{user.sector}}</li>
+							<li>Type de contrat :
+								{{user.contract}}</li>
+                            {# <li>Fin de contrat :
+								{{user.release_date}}</li> #}
+						</ul>
+					</div>
+					<div class="d-flex justify-content-center justify-content-evenly border rounded py-3">
+						<div>
+							<a href="#"><img src="uploads\icons\edit.png" width="50px" height="50px" title=" Modifier {{user.firstname}} {{user.lastname}} "></a>
+						</div>
+						<div>
+							<a href="#"><img src="uploads\icons\delete.png" width="50px" height="50px" title=" Supprimer {{user.firstname}} {{user.lastname}} "></a>
+						</div>
+					</div>
+				</div>
+			{% else %}
+				<p>Il n'y a aucun employé.</p>
+			{% endfor %}
+		</div>
+	</div>
 {% endblock %}
