--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -44,12 +44,12 @@
 							<li>Type de contrat :
 								{{user.contract}}</li>
                             {# <li>Fin de contrat :
-								{{user.release_date}}</li> #}
+								{{user.release_date ? user.release_date|date('d-m-Y') : ''}}</li> #}
 						</ul>
 					</div>
 					<div class="d-flex justify-content-center justify-content-evenly border rounded py-3">
 						<div>
-							<a href="#"><img src="uploads\icons\edit.png" width="50px" height="50px" title=" Modifier {{user.firstname}} {{user.lastname}} "></a>
+							<a href="{{ path ('app_user_edit', {'id': user.id}) }}"><img src="uploads\icons\edit.png" width="50px" height="50px" title=" Modifier {{user.firstname}} {{user.lastname}} "></a>
 						</div>
 						<div>
 							<a href=" {{ path ('app_user_delete', {'id': user.id}) }} "><img src="uploads\icons\delete.png" width="50px" height="50px" title=" Supprimer {{user.firstname}} {{user.lastname}} "></a>
