--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Edit User
+{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+	<div class="container">
+		<h1 class="h3 mb-3 font-weight-normal text-center mt-5 text-uppercase">MODIFIER : {{user.firstname}} {{user.lastname}}</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+		<div class="mb-4">
+			<a href="{{ path ('app_admin') }}" class="text-info fw-bold text-decoration-none">Retour</a>
+		</div>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+		<div class="container border border-info border-3 rounded py-4 d-flex justify-content-center w-75">
+		{{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+        </div>
 
-    {{ include('user/_delete_form.html.twig') }}
+	</div>
 {% endblock %}
