Modification des liens 'Retour'

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -13,7 +13,7 @@
 						Employés</p>
 				</div> #}
 		<div class="mb-4">
-			<a href="{{ path ('app_default') }}" class="text-info fw-bold text-decoration-none">Accueil</a>
+			<a href="{{ path ('app_default') }}" class="text-info fw-bold text-decoration-none fs-5">Accueil</a>
 		</div>
 
 		<div class="container">
