--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -7,7 +7,7 @@
 	<div class="container">
 		<h1 class="h3 mb-3 font-weight-normal text-center mt-5 text-uppercase">créer un nouveau compte</h1>
 		<div class="mb-4">
-			<a href="{{ path ('app_admin') }}" class="text-info fw-bold text-decoration-none">Retour</a>
+			<a href="{{ path ('app_admin') }}" class="text-info fw-bold text-decoration-none fs-5">Retour</a>
 		</div>
 
 		{# {{ include('user/_form.html.twig') }} #}
