--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -8,7 +8,7 @@
 		<h1 class="h3 mb-3 font-weight-normal text-center mt-5 text-uppercase">MODIFIER : {{user.firstname}} {{user.lastname}}</h1>
 
 		<div class="mb-4">
-			<a href="{{ path ('app_admin') }}" class="text-info fw-bold text-decoration-none">Retour</a>
+			<a href="{{ path ('app_admin') }}" class="text-info fw-bold text-decoration-none fs-5">Retour</a>
 		</div>
 
 		<div class="container border border-info border-3 rounded py-4 d-flex justify-content-center w-75">
