--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -8,10 +8,10 @@
 		<h1 class="my-5 text-center text-uppercase">annuaire des employés</h1>
 
 		{# <div class="count">
-					<p class="fs-5 fw-bold">Total :
-						{{user.getTotalItemCount}}
-						Employés</p>
-				</div> #}
+													<p class="fs-5 fw-bold">Total :
+														{{user.getTotalItemCount}}
+														Employés</p>
+												</div> #}
 		<div class="mb-4">
 			<a href="{{ path ('app_default') }}" class="text-info fw-bold text-decoration-none fs-5">Accueil</a>
 		</div>
@@ -33,6 +33,11 @@
 								<li>Type de contrat :
 									{{user.contract}}</li>
 							</ul>
+						</div>
+						<div class="d-flex justify-content-center justify-content-evenly border rounded py-3">
+							<div>
+								<a href=" {{ path ('app_user_show', {'id': user.id}) }} " class="text-info fw-bold text-decoration-none fs-5">VOIR LE PROFIL</a>
+							</div>
 						</div>
 					</div>
 				{% else %}
