Résolution du problème du Delete + mise en forme du formulaire de modification

--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -35,7 +35,7 @@
 		</div>
 
 		<div class="d-flex justify-content-center mt-5">
-			<button type="submit" class="btn btn-primary">ENREGISTRER LE NOUVEAU COMPTE</button>
+			<button type="submit" class="btn btn-success">ENREGISTRER LE NOUVEAU COMPTE</button>
 		</div>
 
 		{{ form_end(form) }}
