--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -5,15 +5,22 @@
 
 {% block body %}
 	<div class="container">
-		<h1 class="h3 mb-3 font-weight-normal text-center mt-5 text-uppercase">MODIFIER : {{user.firstname}} {{user.lastname}}</h1>
+		<h1 class="h3 mb-3 font-weight-normal text-center mt-5 text-uppercase">MODIFIER :
+			{{user.firstname}}
+			{{user.lastname}}</h1>
 
 		<div class="mb-4">
 			<a href="{{ path ('app_admin') }}" class="text-info fw-bold text-decoration-none fs-5">Retour</a>
 		</div>
 
 		<div class="container border border-info border-3 rounded py-4 d-flex justify-content-center w-75">
-		{{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-        </div>
+			{{ include('user/_form.html.twig', {'button_label': 'MODIFIER LE COMPTE'}) }}
+		</div>
 
+		<div class="d-flex justify-content-center my-4">
+			<div>
+				{{ include('user/_delete_form.html.twig') }}
+			</div>
+		</div>
 	</div>
 {% endblock %}
