--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -38,7 +38,7 @@
 						</div>
 						<div class="d-flex justify-content-center justify-content-evenly border rounded py-3">
 							<div>
-								<a href=" {{ path ('app_user_show', {'id': user.id}) }} " class="text-info fw-bold text-decoration-none fs-5">VOIR LE PROFIL</a>
+								<a href=" {{ path ('app_user_show', {'id': user.id}) }} " class="text-info fw-bold text-decoration-none fs-5" title="Voir : {{user.firstname}} {{user.lastname}} ">VOIR LE PROFIL</a>
 							</div>
 						</div>
 					</div>
